Clash_RC_2/Code_Runner/error.txt
Code_Runner/code.cpp:1:6: error: expected constructor, destructor, or type conversion before '(' token
    1 | print("hesdasdadasllo")
      |      ^
